# usbview

./: Makefile.am  configure.ac
src/: global.h  linux_netlink.c  linux_netlink.h  type.h  usbapi.c  usbapi.h  usbview.h  usbview_unix.c
test/: Makefile.am
test/lsusb/: Makefile.am  main.c
test/usb-devices/: Makefile.am  main.c
test/usbapi-test/: Makefile.am  main.c
